# charfreq-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CHANGELOG_OLD.md  Cargo.toml  LICENSE  README.md  example.csv  old.md  rustfmt.toml
.github/workflows/: ci.yml  post-release.yml  release.yml
src/: args.rs  main.rs  scanner.rs  utils.rs
