[package]
name = "charfreq-rs"
version = "0.4.0"
authors = ["James Plummer <jamesp2001@live.co.uk>"]
edition = "2024"
license = "MIT"
description = "Analyse character frequencies in a repository."

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
mimalloc = { version = "0.1.46", default-features = false }
rayon = "1.10.0"
tempfile = "3.20.0"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
