[package]
authors     = [ "PlumJam <git@plumj.am>" ]
categories  = [ "command-line-utilities" ]
description = "Analyse character frequencies in a repository."
edition     = "2024"
homepage    = "https://github.com/plumj-am/charfreq-rs"
keywords    = [ "cli", "counter", "terminal" ]
license     = "MIT"
name        = "charfreq"
readme      = "README.md"
repository  = "https://github.com/plumj-am/charfreq-rs"
version     = "0.7.0"

[[bin]]
name = "charfreq"
path = "src/main.rs"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
clap     = { features = [ "derive" ], version = "4.5.39" }
mimalloc = { default-features = false, version = "0.1.46" }
rayon    = "1.10.0"

[profile.release]
codegen-units = 1
debug         = false
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = "symbols"
